some code added

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,9 @@
         "Dilip"
     ],
     "cSpell.ignoreWords": [
-        "Sarker"
+        "Sarker",
+        "fbox",
+        "hireme",
+        "myfuture"
     ]
 }
